--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3001
-DB_HOST=127.0.0.1
+DB_HOST=https://emmit.castelancarpinteyro.com
 DB_USER=root
 DB_PASSWORD=         
-DB_DATABASE=kickstore
+DB_DATABASE=kicksstore
